Update 's08zi8050-nodejs' component image to: quay.io/rhtap_qe/rhtap-qe-nodejs:73bf9cca3a5fe52e7a7cb14bd4479e45a1da7109@sha256:9299d2839d1f1967fbb5ff0a43b3a074a72ee25ca1c0cfb3e5f056e084a628cf

--- a/components/s08zi8050-nodejs/overlays/development/deployment-patch.yaml
+++ b/components/s08zi8050-nodejs/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: s08zi8050-nodejs
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-nodejs:73bf9cca3a5fe52e7a7cb14bd4479e45a1da7109@sha256:9299d2839d1f1967fbb5ff0a43b3a074a72ee25ca1c0cfb3e5f056e084a628cf
+          name: container-image
